Edit layout and add style small display.

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             rel="stylesheet"
         />
 
-        <title>React App Recipes</title>
+        <title>React App Recipe</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
